refactored recomendation engine
